tests/NormalTests/paczka1/small_fuzzy/85790358.err
Error in line 1: Ecfc3tr6 S738 84,6
Error in line 9: JdRuLTOc S738 4,1
